--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLr92QQNnYAz8UXlBisaNS",
+      "authorship_tag": "ABX9TyMS1FEy4uhrsdGJvHl+6l5N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -578,6 +578,400 @@
           },
           "metadata": {},
           "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Выбрать данные где housing_median_age<20 и median_house_value>7000\n",
+        "df[(df['housing_median_age']<20)&(df['median_house_value']>7000)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "HtfIBeYbjwY5",
+        "outputId": "8571d36e-e95a-41f3-d5bf-dd873a5dd9b9"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+              "4       -119.67     36.33                19.0       1241.0           244.0   \n",
+              "7       -120.65     35.48                19.0       2310.0           471.0   \n",
+              "8       -122.84     38.40                15.0       3080.0           617.0   \n",
+              "13      -117.03     32.97                16.0       3936.0           694.0   \n",
+              "16      -120.81     37.53                15.0        570.0           123.0   \n",
+              "...         ...       ...                 ...          ...             ...   \n",
+              "2981    -120.66     35.49                17.0       4422.0           945.0   \n",
+              "2984    -117.59     33.88                13.0       3239.0           849.0   \n",
+              "2985    -120.47     34.94                17.0       1368.0           308.0   \n",
+              "2991    -117.17     34.28                13.0       4867.0           718.0   \n",
+              "2997    -119.70     36.30                10.0        956.0           201.0   \n",
+              "\n",
+              "      population  households  median_income  median_house_value  \n",
+              "4          850.0       237.0         2.9375             81700.0  \n",
+              "7         1341.0       441.0         3.2250            166900.0  \n",
+              "8         1446.0       599.0         3.6696            194400.0  \n",
+              "13        1935.0       659.0         4.5625            231200.0  \n",
+              "16         189.0       107.0         1.8750            181300.0  \n",
+              "...          ...         ...            ...                 ...  \n",
+              "2981      2307.0       885.0         2.8285            171300.0  \n",
+              "2984      2751.0       813.0         2.6111            107000.0  \n",
+              "2985       642.0       303.0         1.8633            109400.0  \n",
+              "2991       780.0       250.0         7.1997            253800.0  \n",
+              "2997       693.0       220.0         2.2895             62000.0  \n",
+              "\n",
+              "[830 rows x 9 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-dab80877-53d4-4e5d-b553-49f236a0e355\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>housing_median_age</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>total_bedrooms</th>\n",
+              "      <th>population</th>\n",
+              "      <th>households</th>\n",
+              "      <th>median_income</th>\n",
+              "      <th>median_house_value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-119.67</td>\n",
+              "      <td>36.33</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>1241.0</td>\n",
+              "      <td>244.0</td>\n",
+              "      <td>850.0</td>\n",
+              "      <td>237.0</td>\n",
+              "      <td>2.9375</td>\n",
+              "      <td>81700.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>-120.65</td>\n",
+              "      <td>35.48</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>2310.0</td>\n",
+              "      <td>471.0</td>\n",
+              "      <td>1341.0</td>\n",
+              "      <td>441.0</td>\n",
+              "      <td>3.2250</td>\n",
+              "      <td>166900.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>-122.84</td>\n",
+              "      <td>38.40</td>\n",
+              "      <td>15.0</td>\n",
+              "      <td>3080.0</td>\n",
+              "      <td>617.0</td>\n",
+              "      <td>1446.0</td>\n",
+              "      <td>599.0</td>\n",
+              "      <td>3.6696</td>\n",
+              "      <td>194400.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>-117.03</td>\n",
+              "      <td>32.97</td>\n",
+              "      <td>16.0</td>\n",
+              "      <td>3936.0</td>\n",
+              "      <td>694.0</td>\n",
+              "      <td>1935.0</td>\n",
+              "      <td>659.0</td>\n",
+              "      <td>4.5625</td>\n",
+              "      <td>231200.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>-120.81</td>\n",
+              "      <td>37.53</td>\n",
+              "      <td>15.0</td>\n",
+              "      <td>570.0</td>\n",
+              "      <td>123.0</td>\n",
+              "      <td>189.0</td>\n",
+              "      <td>107.0</td>\n",
+              "      <td>1.8750</td>\n",
+              "      <td>181300.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2981</th>\n",
+              "      <td>-120.66</td>\n",
+              "      <td>35.49</td>\n",
+              "      <td>17.0</td>\n",
+              "      <td>4422.0</td>\n",
+              "      <td>945.0</td>\n",
+              "      <td>2307.0</td>\n",
+              "      <td>885.0</td>\n",
+              "      <td>2.8285</td>\n",
+              "      <td>171300.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2984</th>\n",
+              "      <td>-117.59</td>\n",
+              "      <td>33.88</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>3239.0</td>\n",
+              "      <td>849.0</td>\n",
+              "      <td>2751.0</td>\n",
+              "      <td>813.0</td>\n",
+              "      <td>2.6111</td>\n",
+              "      <td>107000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2985</th>\n",
+              "      <td>-120.47</td>\n",
+              "      <td>34.94</td>\n",
+              "      <td>17.0</td>\n",
+              "      <td>1368.0</td>\n",
+              "      <td>308.0</td>\n",
+              "      <td>642.0</td>\n",
+              "      <td>303.0</td>\n",
+              "      <td>1.8633</td>\n",
+              "      <td>109400.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2991</th>\n",
+              "      <td>-117.17</td>\n",
+              "      <td>34.28</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>4867.0</td>\n",
+              "      <td>718.0</td>\n",
+              "      <td>780.0</td>\n",
+              "      <td>250.0</td>\n",
+              "      <td>7.1997</td>\n",
+              "      <td>253800.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2997</th>\n",
+              "      <td>-119.70</td>\n",
+              "      <td>36.30</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>956.0</td>\n",
+              "      <td>201.0</td>\n",
+              "      <td>693.0</td>\n",
+              "      <td>220.0</td>\n",
+              "      <td>2.2895</td>\n",
+              "      <td>62000.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>830 rows × 9 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dab80877-53d4-4e5d-b553-49f236a0e355')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-dab80877-53d4-4e5d-b553-49f236a0e355 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-dab80877-53d4-4e5d-b553-49f236a0e355');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "определить какое максимальное и минимальное значение median_house_value\n",
+        "показать максимальное median_house_value,где median_income=3.1250\n",
+        "узнать какая максимальная population в зоне минимального значения median_house_value"
+      ],
+      "metadata": {
+        "id": "Ag7qKFonkrWX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# определить какое максимальное и минимальное значение median_house_value\n",
+        "df['median_house_value'].max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "azNAVRlHlJqQ",
+        "outputId": "1f6e5029-f8ff-42f4-c316-332c7716ff8c"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "500001.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# показать максимальное median_house_value,где median_income=3.1250\n",
+        "df[df.median_income ==3.1250]['median_house_value'].max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o3AYP7ELmAW5",
+        "outputId": "55c7a46b-a61f-4f67-e1b2-fb2fb7d3b636"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "233300.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# узнать какая максимальная population в зоне минимального значения median_house_value\n",
+        "\n",
+        "df[df.median_house_value==df['median_house_value'].min()]['population'].max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6f0KieiSmzTA",
+        "outputId": "288e8f81-6527-4729-f7c1-e34cc234e316"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1230.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
         }
       ]
     },
